# serializer version: 1
# name: test_plot_confidence_scatter_basic
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'High',
          'value': 3.7,
        }),
        dict({
          'category': 'High',
          'value': 3.8,
        }),
        dict({
          'category': 'High',
          'value': 3.9,
        }),
        dict({
          'category': 'High',
          'value': 3.95,
        }),
        dict({
          'category': 'High',
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'value': 4.0,
        }),
        dict({
          'category': 'High',
          'value': 4.05,
        }),
        dict({
          'category': 'High',
          'value': 4.1,
        }),
        dict({
          'category': 'High',
          'value': 4.2,
        }),
        dict({
          'category': 'High',
          'value': 4.3,
        }),
        dict({
          'category': 'Low',
          'value': 0.7,
        }),
        dict({
          'category': 'Low',
          'value': 0.8,
        }),
        dict({
          'category': 'Low',
          'value': 0.9,
        }),
        dict({
          'category': 'Low',
          'value': 0.95,
        }),
        dict({
          'category': 'Low',
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'value': 1.0,
        }),
        dict({
          'category': 'Low',
          'value': 1.05,
        }),
        dict({
          'category': 'Low',
          'value': 1.1,
        }),
        dict({
          'category': 'Low',
          'value': 1.2,
        }),
        dict({
          'category': 'Low',
          'value': 1.3,
        }),
        dict({
          'category': 'Medium',
          'value': 2.2,
        }),
        dict({
          'category': 'Medium',
          'value': 2.3,
        }),
        dict({
          'category': 'Medium',
          'value': 2.4,
        }),
        dict({
          'category': 'Medium',
          'value': 2.45,
        }),
        dict({
          'category': 'Medium',
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'value': 2.5,
        }),
        dict({
          'category': 'Medium',
          'value': 2.55,
        }),
        dict({
          'category': 'Medium',
          'value': 2.6,
        }),
        dict({
          'category': 'Medium',
          'value': 2.7,
        }),
        dict({
          'category': 'Medium',
          'value': 2.8,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'category',
            'title': 'category',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'value',
            'scale': dict({
              'zero': False,
            }),
            'title': 'value',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'category',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'value',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_custom_styling
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'level': 'X',
          'score': 9.5,
        }),
        dict({
          'level': 'X',
          'score': 9.8,
        }),
        dict({
          'level': 'X',
          'score': 10.0,
        }),
        dict({
          'level': 'X',
          'score': 10.2,
        }),
        dict({
          'level': 'X',
          'score': 10.5,
        }),
        dict({
          'level': 'Y',
          'score': 19.5,
        }),
        dict({
          'level': 'Y',
          'score': 19.8,
        }),
        dict({
          'level': 'Y',
          'score': 20.0,
        }),
        dict({
          'level': 'Y',
          'score': 20.2,
        }),
        dict({
          'level': 'Y',
          'score': 20.5,
        }),
        dict({
          'level': 'Z',
          'score': 29.5,
        }),
        dict({
          'level': 'Z',
          'score': 29.8,
        }),
        dict({
          'level': 'Z',
          'score': 30.0,
        }),
        dict({
          'level': 'Z',
          'score': 30.2,
        }),
        dict({
          'level': 'Z',
          'score': 30.5,
        }),
      ]),
    }),
    'height': 500,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'level',
            'title': 'Category',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'score',
            'scale': dict({
              'zero': False,
            }),
            'title': 'Measurement',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'level',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'score',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'red',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 800,
  })
# ---
# name: test_plot_confidence_scatter_numeric_x_with_labels
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 1.0,
          'y': 0.7,
        }),
        dict({
          'x': 1.0,
          'y': 0.8,
        }),
        dict({
          'x': 1.0,
          'y': 0.9,
        }),
        dict({
          'x': 1.0,
          'y': 0.95,
        }),
        dict({
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'x': 1.0,
          'y': 1.0,
        }),
        dict({
          'x': 1.0,
          'y': 1.05,
        }),
        dict({
          'x': 1.0,
          'y': 1.1,
        }),
        dict({
          'x': 1.0,
          'y': 1.2,
        }),
        dict({
          'x': 1.0,
          'y': 1.3,
        }),
        dict({
          'x': 2.0,
          'y': 2.2,
        }),
        dict({
          'x': 2.0,
          'y': 2.3,
        }),
        dict({
          'x': 2.0,
          'y': 2.4,
        }),
        dict({
          'x': 2.0,
          'y': 2.45,
        }),
        dict({
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'x': 2.0,
          'y': 2.5,
        }),
        dict({
          'x': 2.0,
          'y': 2.55,
        }),
        dict({
          'x': 2.0,
          'y': 2.6,
        }),
        dict({
          'x': 2.0,
          'y': 2.7,
        }),
        dict({
          'x': 2.0,
          'y': 2.8,
        }),
        dict({
          'x': 3.0,
          'y': 3.7,
        }),
        dict({
          'x': 3.0,
          'y': 3.8,
        }),
        dict({
          'x': 3.0,
          'y': 3.9,
        }),
        dict({
          'x': 3.0,
          'y': 3.95,
        }),
        dict({
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'x': 3.0,
          'y': 4.0,
        }),
        dict({
          'x': 3.0,
          'y': 4.05,
        }),
        dict({
          'x': 3.0,
          'y': 4.1,
        }),
        dict({
          'x': 3.0,
          'y': 4.2,
        }),
        dict({
          'x': 3.0,
          'y': 4.3,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'axis': dict({
              'labelExpr': "datum.value === 1.0 ? 'Low' : datum.value === 2.0 ? 'Medium' : datum.value === 3.0 ? 'High' : datum.value",
              'values': list([
                1.0,
                2.0,
                3.0,
              ]),
            }),
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.8,
                3.2,
              ]),
              'zero': False,
            }),
            'title': 'x',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'scale': dict({
              'domain': list([
                0.8,
                3.2,
              ]),
              'zero': False,
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_stdev_extent
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 'A',
          'y': 0.8,
        }),
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'A',
          'y': 1.2,
        }),
        dict({
          'x': 'B',
          'y': 1.8,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'B',
          'y': 2.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'stdev',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_with_identity_line
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'x': 'A',
          'y': 0.9,
        }),
        dict({
          'x': 'A',
          'y': 0.95,
        }),
        dict({
          'x': 'A',
          'y': 1.0,
        }),
        dict({
          'x': 'A',
          'y': 1.05,
        }),
        dict({
          'x': 'A',
          'y': 1.1,
        }),
        dict({
          'x': 'B',
          'y': 1.9,
        }),
        dict({
          'x': 'B',
          'y': 1.95,
        }),
        dict({
          'x': 'B',
          'y': 2.0,
        }),
        dict({
          'x': 'B',
          'y': 2.05,
        }),
        dict({
          'x': 'B',
          'y': 2.1,
        }),
        dict({
          'x': 'C',
          'y': 2.9,
        }),
        dict({
          'x': 'C',
          'y': 2.95,
        }),
        dict({
          'x': 'C',
          'y': 3.0,
        }),
        dict({
          'x': 'C',
          'y': 3.05,
        }),
        dict({
          'x': 'C',
          'y': 3.1,
        }),
      ]),
      'data-normalized-1': list([
        dict({
          'x': 0.9,
          'y': 0.9,
        }),
        dict({
          'x': 3.1,
          'y': 3.1,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'gray',
          'strokeDash': list([
            5,
            5,
          ]),
          'type': 'line',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'title': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'title': 'y',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'x': dict({
            'field': 'x',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'y',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'width': 600,
  })
# ---
# name: test_plot_confidence_scatter_with_title
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'data': dict({
      'name': 'data-normalized-0',
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'group': 'A',
          'measurement': 0.8,
        }),
        dict({
          'group': 'A',
          'measurement': 1.0,
        }),
        dict({
          'group': 'A',
          'measurement': 1.2,
        }),
        dict({
          'group': 'B',
          'measurement': 1.8,
        }),
        dict({
          'group': 'B',
          'measurement': 2.0,
        }),
        dict({
          'group': 'B',
          'measurement': 2.2,
        }),
        dict({
          'group': 'C',
          'measurement': 2.8,
        }),
        dict({
          'group': 'C',
          'measurement': 3.0,
        }),
        dict({
          'group': 'C',
          'measurement': 3.2,
        }),
      ]),
    }),
    'height': 400,
    'layer': list([
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'group',
            'title': 'group',
            'type': 'nominal',
          }),
          'y': dict({
            'field': 'measurement',
            'scale': dict({
              'zero': False,
            }),
            'title': 'measurement',
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'extent': 'ci',
          'type': 'errorbar',
        }),
      }),
      dict({
        'encoding': dict({
          'x': dict({
            'field': 'group',
            'type': 'nominal',
          }),
          'y': dict({
            'aggregate': 'mean',
            'field': 'measurement',
            'scale': dict({
              'zero': False,
            }),
            'type': 'quantitative',
          }),
        }),
        'mark': dict({
          'color': 'steelblue',
          'filled': True,
          'type': 'point',
        }),
      }),
    ]),
    'title': 'Custom Title Test',
    'width': 600,
  })
# ---
